--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
         <activity
-            android:name=".SplashActivity"
+            android:name="hugo.lop.io.marvelappstarter.SplashActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
+            android:name="hugo.lop.io.marvelappstarter.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
